# rapidpro-python

./: .gitignore  .travis.yml  CHANGELOG.md  CHANGES.md  DEPLOY.md  MANIFEST.in  README.md  pip-requires.txt  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
docs/: Makefile  client_v1.rst  client_v2.rst  conf.py  index.rst  make.bat  temba.rst
requirements/: base.txt  tests.txt
temba/: __init__.py  base.py  tests.py  types.py  utils.py
temba_client/: __init__.py  base.py  client.py  clients.py  exceptions.py  serialization.py  tests.py  types.py  utils.py  version.py
temba_client/v1/: __init__.py  base.py  tests.py  types.py
temba_client/v2/: __init__.py  tests.py  types.py
test_files/: boundaries.json  broadcast_created.json  broadcasts_multiple.json  campaigns_created.json  campaigns_single.json  contacts_1.json  contacts_2.json  contacts_created.json  contacts_multipage_1.json  contacts_multipage_2.json  contacts_multipage_3.json  contacts_multiple.json  contacts_single.json  events_created.json  events_multiple.json  fields_created.json  flows_created.json  flows_multiple.json  flows_single.json  groups_1.json  labels_created.json  labels_multiple.json  labels_single.json  messages_multiple.json  messages_single.json  results_missing_optional.json  results_missing_required.json  runs_created.json  runs_multiple.json  runs_single.json
test_files/v1/: boundaries_multiple.json  broadcasts_created.json  broadcasts_single.json  campaigns_multiple.json  contacts_created.json  contacts_multipage_2.json  contacts_multiple.json  events_single.json  fields_multiple.json  fields_single.json  flow_definition_created.json  flows_multiple.json  flows_single.json  groups_multiple.json  labels_created.json  labels_single.json  messages_single.json  org.json  runs_created.json  runs_multiple.json  runs_single.json
test_files/v2/: archives.json  boundaries.json  broadcast_created.json  broadcasts.json  campaign_events.json  campaigns.json  channel_events.json  channels.json  classifiers.json  contact_created.json  contacts.json  definitions.json  empty.json  fields.json  flow_starts.json  flows.json  globals.json  group_created.json  groups.json  label_created.json  labels.json  messages.json  resthook_events.json  resthook_subscribers.json  resthooks.json  runs.json  runs_with_next.json
