[project]
name = "rapidpro-python"
version = "2.22.0"
description = "Python client library for the RapidPro API"
authors = [{ name = "Nyaruka", email = "code@nyaruka.com" }]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "BSD-4-Clause" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests >= 2.32.0",
    "iso8601 >= 0.1.13",
]

[project.urls]
Repository = "http://github.com/rapidpro/rapidpro-python"

[dependency-groups]
dev = [
    "coverage>=5.3,<6",
    "ruff>=0.14.0,<0.15",
    "isort>=5.10.1,<6",
    "black>=24.3.0,<27",
    "nose2>=0.12.0,<0.13",
]

[tool.hatch.build.targets.sdist]
include = ["temba_client"]

[tool.hatch.build.targets.wheel]
include = ["temba_client"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 119

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "F405"]

[tool.isort]
multi_line_output = 3
force_grid_wrap = 0
line_length = 119
include_trailing_comma = true
combine_as_imports = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
