[project]
name = "rapidpro-python"
version = "2.22.2"
description = "Python client library for the RapidPro API"
authors = [{ name = "Nyaruka", email = "code@nyaruka.com" }]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "BSD-4-Clause" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests >= 2.32.0",
    "iso8601 >= 0.1.13",
]

[project.urls]
Repository = "http://github.com/rapidpro/rapidpro-python"

[dependency-groups]
dev = [
    "coverage>=5.3,<6",
    "ruff>=0.15.7,<0.16",
    "nose2>=0.12.0,<0.13",
]

[tool.hatch.build.targets.sdist]
include = ["temba_client"]

[tool.hatch.build.targets.wheel]
include = ["temba_client"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "F405"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["temba_client"]
